I really don't get mtl
I thought I kinda got Reader (as ->) from fooling around with it weeks
(months?) ago but I guess not
This whole GI.Cairo.Context getting passed around is definitely a Reader
(the idea was to have all the draw functions return GI.Cairo.Context ->
 IO () and map all that together in drawCb)
but not getting Reader --> don't get mtl --> don't get what Monads go
where --> zero clue what's going on

I would think about avoiding mtl for this simple thing... except
renderWithContext returns a MonadIO and while I could just treat that as
identical to IO, I kinda want to get all the mtl stuff to work together
so my hls errors aren't super cryptic

--- a/hexournal.cabal
+++ b/hexournal.cabal
@@ -26,7 +26,7 @@ extra-source-files:
 library
     hs-source-dirs:   src
     exposed-modules:  HeXournal
-                      HeXournal.Main
+                      HeXournal.Core
                       HeXournal.UI
     build-depends:    base ^>=4.14.0.0
                      ,haskell-gi-base
@@ -35,10 +35,9 @@ library
                      ,gi-cairo
                      ,gi-cairo-render >=0.1.0
                      ,gi-cairo-connector
+                     ,mtl
     default-language: Haskell2010
     ghc-options:       -Wall
-                       -threaded
-                       -with-rtsopts=-N
                        -O0
 
 executable hexournal
