--- a/hexournal.cabal
+++ b/hexournal.cabal
@@ -56,6 +56,7 @@ executable hexournal
                      ,gi-cairo-render
                      ,gi-cairo-connector
                      ,hexournal
+                     ,mtl
     default-language: Haskell2010
     ghc-options:       -Wall
                        -threaded
